Fixed a visual bug where main menu img was overlapping with content.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
   body {
       margin: auto;
-      padding-top: 70px;
+      padding-top: 85px;
       padding-bottom: 50px;
       background-color: #FCEDE0;
       box-sizing: border-box;
